added a div to display the scores and built a corresponding function to update them

--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
     <button id="paper">paper</button>
     <button id="scissors">scissors</button>
   </div>
+  <div class="scores">
+    <h2>Computer:</h2>
+    <p class="computer-score">0</p>
+    <h2>Player:</h2>
+    <p class="player-score">0</p>
+  </div>
+  <div class="results"></div>
 </body>
 </html>
